--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -49,7 +49,7 @@
             </ul>
           </nav><!-- .nav-menu -->
     
-          <a href="untitled-1.html" class="get-started-btn scrollto">Get Started</a>
+          <a href="#home" class="get-started-btn scrollto">Get Started</a>
     
         </div>
       </header><!-- End Header -->
@@ -62,8 +62,8 @@
           <h1>Elegant and creative solutions</h1>
           <h2>We are team of talanted designers making websites with Bootstrap</h2>
           <div class="d-flex">
-            <a href="untitled-1.html" class="btn-get-started scrollto">Get Started</a>
-            <a href="https://www.youtube.com//watch?v=1nJOku-FPV8&list=RD1nJOku-FPV8&start_radio=1" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
+            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="https://www.youtube.com/" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
@@ -392,7 +392,7 @@
                 <div class="address">
                   <i class="icofont-google-map"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, damascus, syria</p>
+                  <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
   
                 <div class="email">
@@ -404,7 +404,7 @@
                 <div class="phone">
                   <i class="icofont-phone"></i>
                   <h4>Call:</h4>
-                  <p>+963 991 662 245</p>
+                  <p>+1 5589 55488 55s</p>
                 </div>
   
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
